--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  background: #fff;
+  /*display: flex;*/
+  /*max-width: 1300px;*/
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 30px;
+  /*margin-right: 30px;*/
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-top: 5px;
+  min-height: 80vh;
+  border-radius: 25px;
+  /*height: 90;*/
+}
